Adding a template scaffold

--- a/_plugins/figma-template.md.erb
+++ b/_plugins/figma-template.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: <%= pagetitle %>
-<%= "preface: #{preface}" if !preface.blank? %>
+<%= "summary: #{summary}" if !summary.blank? %>
 ---
 
 <% blocks.each do |block| %>
