--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,9 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 ---
+{% assign zoombase = 100 | divided_by: site.figmaconfig.scale %}
 
+// {{site}}
+img { 
+    zoom: {{zoombase}}%;
+}
 @import "main";
