--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,9 +1,8 @@
 ---
 ---
-{% assign zoombase = 100 | divided_by: site.figmaconfig.scale %}
+$base-font-family:   -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif !default;
 
-// {{site}}
-img { 
-    zoom: {{zoombase}}%;
-}
+{% assign zoombase = 100 | divided_by: site.figmaconfig.scale %}
+$zoombase: {{zoombase}}%;
+
 @import "main";
