adding logo, setting the sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
 {% include head.html %}
 
 <body>
-
-  {% include figma-menu.html %}
-  {{ content }}
+  {% include sidebar.html %}
+  <div id="content">
+    {{ content }}
+  </div>
 </body>
 
 </html>
