--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -1,17 +1,19 @@
 <nav id="nav" role="navigation">
   <% @structure.each do |category| %>
-    <%= category[0] %>
-    <ul class="page-navigation">
-    <% category[1].each do |item| %>
-      <li class='<%= item[1] %> {% if page.id == '<%= item[1] %>' %} active{% endif%}'>
-        <a href="/<%= @pagespath %>/<%= item[1] %>.html">
-          <%= item[0] %>
-          <% if !item[2].blank? %>
-            <span class='tag <%= item[2].downcase.sub(" ", "") %>'><%= item[2] %></span>
-          <% end %>
-        </a>
-      </li>
-    <% end %>
-    </ul>
+    <section>
+      <strong class="category-navigation"><%= category[0] %></strong>
+      <ul class="page-navigation">
+      <% category[1].each do |item| %>
+        <li class='<%= item[1] %> {% if page.id == '<%= item[1] %>' %} active{% endif%}'>
+          <a href="/<%= @pagespath %>/<%= item[1] %>.html">
+            <%= item[0] %>
+            <% if !item[2].blank? %>
+              <span class='tag <%= item[2].downcase.sub(" ", "") %>'><%= item[2] %></span>
+            <% end %>
+          </a>
+        </li>
+      <% end %>
+      </ul>
+    </section>
   <% end %>
 </nav>
