--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,50 @@
 @charset "utf-8";
 
+// RESET!
+
+* { padding: 0; margin: 0; -moz-box-sizing: border-box; box-sizing: border-box; }
+
+html { font-size: 62.5%; }
+
+body, h1, h2, h3, h4, h5, h6,
+p, blockquote, pre, hr,
+dl, dd, ol, ul, figure {
+  margin: 0;
+  padding: 0;
+}
+
+a img { border: none; }
+
+// GO :)
 body {
-    font-family: $base-font-family;
+    font: 400 1.6rem -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+// Layout 
+#sidebar {
+    float: left;
+    width: 32rem;
+    overflow: hidden;
+}
+#content {
+    margin-left: 32rem
+}
+
+// Sidebar
+#sidebar {
+    .logo{
+        display: block;
+        padding: 4.8rem 3.2rem 2.4rem;
+        a { display: block; }
+        img { height: 2.4rem } // defining height for the logo, move to a variable?
+    }
+
+    nav {
+        .category-navigation {
+            padding: 2.4rem 3.2rem;
+            font-weight: normal;
+        }
+    }
 }
 
 .page {
