Moving some elements of the layout around

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,11 +3,10 @@
 {% include head.html %}
 
 <body>
-
-  {% include sidebar.html %}
-
-  {{ content }}
-
+  {% include figma-menu.html %}
+  <div id="content">
+    Hello
+  </div>
 </body>
 
 </html>
