--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -1,5 +1,7 @@
 <nav id="nav" role="navigation">
-  <div class="logo"><img src="{{ "/assets/logo.svg" | relative_url }}"></div>
+<div class="logo">
+  <a href="{{ "/" | relative_url }}"><img src="{{ "/assets/images/logo.svg" | relative_url }}"></a>
+</div>
 
 <% @structure.each do |category| %>
   <span class='title'><%= category[0] %></span>
