added: welcome message + mandatory GIF

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -105,6 +105,7 @@
     }
     img {
         border-radius: .1rem;
+        margin: 1.2rem 0;
     }
     .page-summary {
         margin-bottom: 4.8rem;
