Exposing the figma link if defined in the config. Array to hash in templates

--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -1,21 +1,21 @@
 <nav id="nav" role="navigation">
-<div class="logo">
-  <a href="{{ "/" | relative_url }}"><img src="{{ "/assets/images/logo.svg" | relative_url }}"></a>
-</div>
+  <div class="logo">
+    <a href="{{ "/" | relative_url }}"><img src="{{ "/assets/images/logo.svg" | relative_url }}"></a>
+  </div>
 
-<% @structure.each do |category| %>
-  <span class='title'><%= category[0] %></span>
-  <ul>
-  <% category[1].each do |item| %>
-    <li class='<%= item[1] %> {% if page.id == '<%= item[1] %>' %} active{% endif%}'>
-      <a href="/<%= @pagespath %>/<%= item[1] %>.html">
-        <%= item[0] %>
-        <% if !item[2].blank? %>
-          <span class='tag <%= item[2].downcase.sub(" ", "") %>'><%= item[2] %></span>
-        <% end %>
-      </a>
-    </li>
+  <% @structure.each do |category| %>
+    <span class='title'><%= category[0] %></span>
+    <ul>
+    <% category[1].each do |item| %>
+      <li class='<%= item['filename'] %> {% if page.id == '<%= item['filename'] %>' %} active{% endif%}'>
+        <a href="/<%= @pagespath %>/<%= item['filename'] %>.html">
+          <%= item['title'] %>
+          <% if !item['tag'].blank? %>
+            <span class='tag <%= item['tag'].downcase.sub(" ", "") %>'><%= item['tag'] %></span>
+          <% end %>
+        </a>
+      </li>
+    <% end %>
+    </ul>
   <% end %>
-  </ul>
-<% end %>
 </nav>
