Using figmaurl consistently

--- a/_plugins/figma-template.md.erb
+++ b/_plugins/figma-template.md.erb
@@ -2,13 +2,13 @@
 layout: page
 title: <%= pagetitle %>
 id: <%= filename %>
-<% if @figmalinks %>figmalink: https://www.figma.com/file/<%= figmadoc %>?node-id=<%= pageid %><% end %>
+<% if @figmaurl %>figmaurl: https://www.figma.com/file/<%= figmadoc %>?node-id=<%= pageid %><% end %>
 <%= "summary: #{summary}" if !summary.blank? %>
 <%= "tags: #{tags}" if !tags.blank? %>
 ---
 <% blocks.each do |block| %>
 <%= "## #{block['title']}" if !block['title'].blank? %>
-<%= "<img src='#{block['image']}' alt='#{block['title']}' #{"data-figmaurl='https://www.figma.com/file/#{figmadoc}?node-id=#{block['figmaid']}'" if @figmalinks}/>" %>
+<%= "<img src='#{block['image']}' alt='#{block['title']}' #{"data-figmaurl='https://www.figma.com/file/#{figmadoc}?node-id=#{block['figmaid']}'" if @figmaurl}/>" %>
 
 <%= block['text'] %>
 <% end %>
