--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
+{% if site.figmaconfig.home %}
 {% include head.html %}
-
 <body>
   {% include figma-menu.html %}
   <div id="content">
     {{content}}
   </div>
 </body>
-
+{% else %}
+<head><meta http-equiv="refresh" content="0; url=/designdoc/pages/{{site.firstpage}}.html" /></head>
+{% endif %}
 </html>
