--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en " }}">
-{% include head.html %}
+---
+layout: default
+---
 
-<body>
-  {% include figma-menu.html %}
-  <div id="content">
-    {{content}}
-  </div>
-</body>
-
-</html>
+{{ content }}
