--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -11,7 +11,9 @@
         <a href="/<%= @pagespath %>/<%= item['filename'] %>.html">
           <%= item['title'] %>
           <% if !item['tag'].blank? %>
-            <span class='tag <%= item['tag'].downcase.sub(" ", "") %>'><%= item['tag'] %></span>
+            <span tag='<%= item['tag'].downcase.sub(" ", "") %>' class='tag <%= item['tag'].downcase.sub(" ", "") %>'>
+              <%= item['tag'] %>
+            </span>
           <% end %>
         </a>
       </li>
