--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  {% if site.baseurl %}
+  <base href="{{site.baseurl}}">
+  {% endif %}
 
   <link rel="icon" type="image/png" href="/assets/images/favicon.png">
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
