Adding baseurl to the redirect rule

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,6 @@
 </head>
 {% elsif page.layout == 'home' %}
 <head>
-  <meta http-equiv="refresh" content="0; url=/designdoc/pages/{{site.firstpage}}.html" />
+  <meta http-equiv="refresh" content="0; url={{site.baseurl}}/designdoc/pages/{{site.firstpage}}.html" />
 </head>
 {% endif %}
