--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,3 @@
-{% if site.figmaconfig.home %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +7,12 @@
   <base href="{{site.baseurl}}">
   {% endif %}
 
-  <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+  <link rel="icon" type="image/png" href="assets/images/favicon.png">
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-</head>
-{% elsif page.layout == 'home' %}
-<head>
+
+  {% if site.figmaconfig.home == false %}
   <meta http-equiv="refresh" content="0; url={{site.baseurl}}/designdoc/pages/{{site.firstpage}}.html" />
+  {% endif %}
 </head>
-{% endif %}
