update: tag it's no longer required

--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -11,7 +11,7 @@
         <a href="/<%= @pagespath %>/<%= item['filename'] %>.html">
           <%= item['title'] %>
           <% if !item['tag'].blank? %>
-            <span tag='<%= item['tag'].downcase.sub(" ", "") %>' class='tag <%= item['tag'].downcase.sub(" ", "") %>'>
+            <span class='tag <%= item['tag'].downcase.sub(" ", "") %>'>
               <%= item['tag'] %>
             </span>
           <% end %>
