update: simplified functionality when showing tags in the hover nav

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -49,57 +49,42 @@
         background: rgba(rgba(0, 0, 0, .05), .05);
     }
     a {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         padding: 1rem .8rem;
         text-decoration: none;
         color: $text-color;
         border-radius: $base-radius;
-        transition: transform .2s ease;
+        transition: padding .2s ease;
         position: relative;
         &:hover {
             color: #000;
             background: rgba(rgba(0, 0, 0, .05), .05);
-            transform: translateX(.1rem);
-
-            .tag:after {
-                opacity: 1;
-                transform: translateX(0);
-            }
+            padding-left: .9rem;
             .tag {
-                background: transparent;
+                width: auto;
+                height: auto;
+                text-indent: 0;
+                transform: translateX(.2rem);
             }
         }
+
         .tag {
             width: .6rem;
             height: .6rem;
+            text-indent: -9999px;
             position: relative;
-            left: 0;
-            border-radius: .8rem;
-            display: inline-block;
-            text-indent: -999px;
-            background: #5F9EFB;
-            position: relative;
-            transition: all .05s ease;
-            &:after {
-                content: attr(tag);
-                display: block;
-                padding: .1rem .2rem;
-                left: 0;
-                top: -.4rem;
-                background: inherit;
-                color: #FFF;
-                position: absolute;
-                text-transform: uppercase;
-                text-indent: 0;
-                font-size: 1rem;
-                border-radius: .3rem;
-                font-weight: 600;
-                font-size: .9rem;
-                letter-spacing: -.03rem;
-                opacity: 0;
-                transition: all .15s ease;
-                transform: translateX(-.1rem);
-            }
+            padding: .1rem .3rem;
+            text-transform: uppercase;
+            border-radius: .3rem;
+            font-weight: 600;
+            font-size: .9rem;
+            letter-spacing: -.03rem;
+            color: #FFF;
+            position: absolute;
+            right: .6rem;
+            transition: transform .2s ease;
         }
         .tag.inprogress {
             background: #5F9EFB;
