Adjusting the alignment of the logo and the title (closes #25)

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,7 +22,7 @@
     overflow-y: auto;
 
     .logo {
-        margin: .4rem auto 2.4rem;
+        margin: 2.8rem auto 1.4rem;
         img {
             height: 3.2rem;
         }
