--- a/_plugins/figma-menu.html.erb
+++ b/_plugins/figma-menu.html.erb
@@ -8,7 +8,7 @@
     <ul>
     <% category[1].each do |item| %>
       <li class='<%= item['filename'] %> {% if page.id == '<%= item['filename'] %>' %} active{% endif%}'>
-        <a href="{{site.baseurl}}/<%= @pagespath %>/<%= item['filename'] %>.html">
+        <a href="{{site.baseurl}}/<%= @pagespath %>/<%= item['filename'] %>">
           <%= item['title'] %>
           <% if !item['tag'].blank? %>
             <span class='tag <%= item['tag'].downcase.sub(" ", "") %>'>
