Making width explicit for images

--- a/_plugins/figma-template.md.erb
+++ b/_plugins/figma-template.md.erb
@@ -8,7 +8,7 @@ id: <%= filename %>
 ---
 <% blocks.each do |block| %>
 <%= "## #{block['title']}" if !block['title'].blank? %>
-<%= "<img src='{{site.baseurl}}#{block['image']}' srcset='{{site.baseurl}}#{block['image']} {{site.figmaconfig.scale}}x' alt='#{block['title']}' #{"data-figmaurl='https://www.figma.com/file/#{figmadoc}?node-id=#{block['figmaid']}'" if @figmaurl}/>" %>
+<%= "<img src='{{site.baseurl}}#{block['image']}' srcset='{{site.baseurl}}#{block['image']} {{site.figmaconfig.scale}}x' width='#{block['width']}' alt='#{block['title']}' #{"data-figmaurl='https://www.figma.com/file/#{figmadoc}?node-id=#{block['figmaid']}'" if @figmaurl}/>" %>
 
 <%= block['text'] %>
 <% end %>
