--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 <article>
   <header>
     {% if page.title %}
-    <h1>
+    <h1 {% if page.figmaurl %} data-figmaurl="{{ page.figmaurl }}" {% endif %}>
       {{ page.title }}
       
       {% if page.tags %}
