--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
     {% if page.title %}
       <h1>
         {% if page.figmaurl %}
-        <a class="anchor-figma" href="{{ page.figmaurl }}"></a>
+        <a class="anchor-figma" href="{{ page.figmaurl }}" target="_new"></a>
         {% endif %}
         {{ page.title }}
 
