--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -131,7 +131,7 @@ blockquote {
     margin-left: $base-nav-width;
     padding: 4.8rem 4.0rem 4.8rem 7.2rem;
 
-    a { color: #5F9EFB; }
+    a { color: $brand-color; }
     h1 {
         font-size: 3.8rem;
         line-height: 4.8rem;
