update: revert margin left on lists so they work with nested lists

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -174,7 +174,7 @@ blockquote {
         line-height: 2.2rem;
         max-width: 64rem;
         margin-bottom: 2.2rem;
-        list-style: inside;
+        margin-left: 2rem;
         li {
             margin-bottom: .6rem;
         }
